# byteclaw

./: Cargo.toml  README.md  authentication.html  browser-automation.html  changelog.html  cloud-deploy.html  comparison.html  configuration.html  discord.html  docker.html  index.html  local-validation.html  memory.html  openclaw-import.html  print.html  providers.html  sandbox.html  searchindex.js  security.html  session-branching.html  toc.html  toc.js  tool-registry.html  voice.html  whatsapp.html
.github/workflows/: build.yml
channels/: feishu.html
crates/channels/src/: plugin.rs
crates/config/src/: schema.rs  validate.rs
crates/feishu/: Cargo.toml
crates/feishu/src/: access.rs  config.rs  error.rs  handler.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: channel.rs  server.rs
docs/plans/: 2026-03-03-feishu-channel-design.md  2026-03-03-feishu-channel-implementation.md
docs/src/: SUMMARY.md
docs/src/channels/: feishu.md
