[package]
name = "moltis-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
open-lark = { version = "0.3", features = ["websocket"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
moltis-channels = { workspace = true }
moltis-common = { workspace = true }

[features]
default = []
tracing = []
metrics = ["moltis-channels/metrics"]

[lints]
workspace = true
